# gaugi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  requirements.txt  setup.py  upload.sh
Gaugi/: Algorithm.py  EDM.py  MsgStream.h  TEventLoop.py  __init__.py  defines.h  utilities.py
Gaugi/messenger/: Logger.py
Gaugi/monet/: AtlasStyle.py  PlotFunctions.py  TAxisFunctions.py  __init__.py
Gaugi/streamable/: RawDictStreamable.py
Gaugi/tex/: BeamerAPI.py  TexAPI.py
Root/: LinkDef.h  MsgStream.cxx
ci/: test_import.py
cmake/: InstallGaugiFunctions.cmake
python/: Algorithm.py  Configure.py  EDM.py  EventContext.py  EventLoop.py  LimitedTypeList.py  LoopingBounds.py  RawDictStreamable.py  Rounding.py  Service.py  TEventLoop.py  __init__.py  enumerations.py  gtypes.py  npConstants.py  parallel.py  types.py  utilities.py
python/messenger/: Logger.py  MsgBase.py  StringLogger.py
python/parsers/: ClusterManager.py  Grid.py  Logger.py  ParsingUtils.py  __init__.py
python/storage/: FileIO.py  StoreGate.py
python/streamable/: RawDictStreamable.py
